--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
   </main>
   
-  <!-- <footer class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Keven CB</a>.
-  </footer> -->
+    Coded by <a href="https://github.com/kevencb" target="_blank">Keven CB</a>.
+  </footer>
 </body>
 </html>
