--- a/index.html
+++ b/index.html
@@ -72,5 +72,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/kevencb" target="_blank">Keven CB</a>.
   </footer>
+
+  <script src="./js/main.js"></script>
 </body>
 </html>
