Finalización del proyecto

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
           <label class="form__label" for="">Exp. Date (MM/YY)</label>
           <label class="form__label" for="">CVC</label>
           <div class="form__date">
-            <input class="form__input" type="text" maxlength="2" id="cardMonth" name="cardMonth" placeholder="MM">
-            <input class="form__input" type="text" maxlength="2" id="cardYear"  name="cardYear" placeholder="YY">
+            <input class="form__input" type="text" maxlength="2" id="input_cardMonth" name="cardMonth" placeholder="MM">
+            <input class="form__input" type="text" maxlength="2" id="input_cardYear"  name="cardYear" placeholder="YY">
           </div>
           <input class="form__input" type="text" maxlength="3" id="cardCVC" name="cardCVC" placeholder="e.g. 123">
           <div class="form__errors">
